<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2013 Mudar Noufal, PeaceOfMind+

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="navigator"
            type="ca.mudar.fairphone.peaceofmind.ui.activity.SplashActivity.SplashNavigator" />

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_frame">

            <LinearLayout
                style="@style/splashWrapper"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/logo_anim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:layout_marginTop="32dp"
                    app:srcCompat="@drawable/splash_logo_anim" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:text="@string/splash_title"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/splash_title_text"
                    android:textStyle="italic" />

                <TextView
                    style="@style/splashDescText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/splash_desc_1" />

                <TextView
                    style="@style/splashDescText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/splash_desc_2" />

                <TextView
                    style="@style/splashDescText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/splash_desc_3" />

            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/bottom_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/splash_button">

            <android.support.v7.widget.AppCompatButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> navigator.onGrantPermission(context)}"
                android:text="@string/btn_grant_permission"
                android:textColor="@color/text_primary_inv" />
        </FrameLayout>

    </RelativeLayout>

</layout>
